--- a/package.json
+++ b/package.json
@@ -7,12 +7,6 @@
     "@emotion/styled": "^11.0.0",
     "@manaflair/redux-batch": "^1.0.0",
     "@reduxjs/toolkit": "^1.5.0",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^12.0.0",
-    "@types/react-dom": "^16.9.8",
     "antd": "^4.9.1",
     "axios": "^0.21.0",
     "emotion": "^11.0.0",
@@ -37,6 +31,18 @@
     "build": "react-app-rewired build",
     "test": "react-app-rewired test"
   },
+  "jest": {
+    "moduleNameMapper": {
+      "^@/(.*)$": "<rootDir>/src/$1",
+      "^@routes/(.*)$": "<rootDir>/src/routes/$1",
+      "^@redux/(.*)$": "<rootDir>/src/redux-setup/$1",
+      "^@services/(.*)$": "<rootDir>/src/services/$1",
+      "^@definitions/(.*)$": "<rootDir>/src/shared/definitions/$1",
+      "^@components/(.*)$": "<rootDir>/src/shared/components/$1",
+      "^@utils/(.*)$": "<rootDir>/src/shared/utils/$1",
+      "^@pages/(.*)$": "<rootDir>/src/pages/$1"
+    }
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -56,8 +62,14 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "@types/jest": "^26.0.15",
+    "@types/node": "^12.0.0",
     "@types/path-to-regexp": "^1.7.0",
     "@types/react": "^16.14.2",
+    "@types/react-dom": "^16.9.8",
     "@types/react-redux": "^7.1.11",
     "@types/react-router-dom": "^5.1.6",
     "@types/redux-saga": "^0.10.5",
@@ -67,6 +79,7 @@
     "eslint-config-airbnb-typescript": "^12.0.0",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-prettier": "^3.1.4",
+    "jest-module-name-mapper": "^0.1.5",
     "prettier": "^2.2.1",
     "react-app-rewired": "^2.1.6"
   }
