--- a/package.json
+++ b/package.json
@@ -27,9 +27,10 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "start": "react-app-rewired start",
+    "dev": "react-app-rewired start",
     "build": "react-app-rewired build",
-    "test": "react-app-rewired test"
+    "test": "react-app-rewired test",
+    "mock": "cd mock && npm run server"
   },
   "jest": {
     "moduleNameMapper": {
@@ -80,6 +81,7 @@
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-prettier": "^3.1.4",
     "jest-module-name-mapper": "^0.1.5",
+    "nodemon": "^2.0.6",
     "prettier": "^2.2.1",
     "react-app-rewired": "^2.1.6"
   }
