--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,6 +34,7 @@
     "node_modules",
     "dist",
     "jest.config.ts",
-    "config-overrides.js"
+    "config-overrides.js",
+    "mock"
   ]
 }
