--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "@reduxjs/toolkit": "^1.5.0",
     "antd": "^4.9.1",
     "axios": "^0.21.0",
+    "concurrently": "^5.3.0",
     "emotion": "^11.0.0",
     "history": "^5.0.0",
     "i18next": "^19.8.4",
     "i18next-browser-languagedetector": "^6.0.1",
     "i18next-http-backend": "^1.0.21",
+    "npm-run-all": "^4.1.5",
     "path-to-regexp": "^6.2.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -27,7 +29,8 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "dev": "react-app-rewired start",
+    "dev": "concurrently \"npm run mock\"" ,
+    "dev:react": "react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
     "mock": "cd mock && npm run server"
