--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "@reduxjs/toolkit": "^1.5.0",
     "antd": "^4.9.1",
     "axios": "^0.21.0",
-    "concurrently": "^5.3.0",
     "emotion": "^11.0.0",
     "history": "^5.0.0",
     "i18next": "^19.8.4",
@@ -19,6 +18,7 @@
     "path-to-regexp": "^6.2.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
     "react-i18next": "^11.7.4",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
@@ -29,7 +29,7 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "dev": "concurrently \"npm run mock\"" ,
+    "dev": "concurrently -k -p [{name}] -n REACT,MOCK -c red.bold,green.bold \"npm:dev:react\" \"npm:mock\"",
     "dev:react": "react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
@@ -74,11 +74,13 @@
     "@types/path-to-regexp": "^1.7.0",
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.8",
+    "@types/react-helmet": "^6.1.0",
     "@types/react-redux": "^7.1.11",
     "@types/react-router-dom": "^5.1.6",
     "@types/redux-saga": "^0.10.5",
     "@typescript-eslint/eslint-plugin": "^4.9.0",
     "@typescript-eslint/parser": "^4.9.0",
+    "concurrently": "^5.2.0",
     "eslint": "^7.14.0",
     "eslint-config-airbnb-typescript": "^12.0.0",
     "eslint-config-prettier": "^6.15.0",
